// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown render renders correctly with correct as true 1`] = `
<Dropdown
  choices={
    Array [
      Object {
        "id": undefined,
        "label": "Jumped",
        "value": "Jumped",
      },
      Object {
        "id": undefined,
        "label": "Laughed",
        "value": "Laughed",
      },
      Object {
        "id": undefined,
        "label": "Smiled",
        "value": "Smiled",
      },
    ]
  }
  classes={
    Object {
      "correctIcon": "Dropdown-correctIcon-11",
      "correctnessIndicatorIcon": "Dropdown-correctnessIndicatorIcon-10",
      "disabledCorrect": "Dropdown-disabledCorrect-2",
      "disabledIncorrect": "Dropdown-disabledIncorrect-3",
      "incorrectIcon": "Dropdown-incorrectIcon-12",
      "label": "Dropdown-label-7",
      "menuRoot": "Dropdown-menuRoot-6",
      "root": "Dropdown-root-1",
      "selectMenu": "Dropdown-selectMenu-4",
      "selected": "Dropdown-selected-5",
      "selectedIndicator": "Dropdown-selectedIndicator-8",
      "srOnly": "Dropdown-srOnly-9",
    }
  }
  correct={true}
  disabled={false}
  id="1"
  onChange={[MockFunction]}
  value="Jumped"
/>
`;

exports[`Dropdown render renders correctly with default props 1`] = `
<Dropdown
  choices={
    Array [
      Object {
        "id": undefined,
        "label": "Jumped",
        "value": "Jumped",
      },
      Object {
        "id": undefined,
        "label": "Laughed",
        "value": "Laughed",
      },
      Object {
        "id": undefined,
        "label": "Smiled",
        "value": "Smiled",
      },
    ]
  }
  classes={
    Object {
      "correctIcon": "Dropdown-correctIcon-11",
      "correctnessIndicatorIcon": "Dropdown-correctnessIndicatorIcon-10",
      "disabledCorrect": "Dropdown-disabledCorrect-2",
      "disabledIncorrect": "Dropdown-disabledIncorrect-3",
      "incorrectIcon": "Dropdown-incorrectIcon-12",
      "label": "Dropdown-label-7",
      "menuRoot": "Dropdown-menuRoot-6",
      "root": "Dropdown-root-1",
      "selectMenu": "Dropdown-selectMenu-4",
      "selected": "Dropdown-selected-5",
      "selectedIndicator": "Dropdown-selectedIndicator-8",
      "srOnly": "Dropdown-srOnly-9",
    }
  }
  correct={false}
  disabled={false}
  id="1"
  onChange={[MockFunction]}
  value="Jumped"
/>
`;

exports[`Dropdown render renders correctly with disabled prop as true 1`] = `
<Dropdown
  choices={
    Array [
      Object {
        "id": undefined,
        "label": "Jumped",
        "value": "Jumped",
      },
      Object {
        "id": undefined,
        "label": "Laughed",
        "value": "Laughed",
      },
      Object {
        "id": undefined,
        "label": "Smiled",
        "value": "Smiled",
      },
    ]
  }
  classes={
    Object {
      "correctIcon": "Dropdown-correctIcon-11",
      "correctnessIndicatorIcon": "Dropdown-correctnessIndicatorIcon-10",
      "disabledCorrect": "Dropdown-disabledCorrect-2",
      "disabledIncorrect": "Dropdown-disabledIncorrect-3",
      "incorrectIcon": "Dropdown-incorrectIcon-12",
      "label": "Dropdown-label-7",
      "menuRoot": "Dropdown-menuRoot-6",
      "root": "Dropdown-root-1",
      "selectMenu": "Dropdown-selectMenu-4",
      "selected": "Dropdown-selected-5",
      "selectedIndicator": "Dropdown-selectedIndicator-8",
      "srOnly": "Dropdown-srOnly-9",
    }
  }
  correct={false}
  disabled={true}
  id="1"
  onChange={[MockFunction]}
  value="Jumped"
/>
`;
